// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse should parse "" 1`] = `[ParseError: Invalid Message]`;

exports[`parse should parse ":! FOO" 1`] = `
{
  "command": "FOO",
  "params": [],
}
`;

exports[`parse should parse ":! FOO" 2`] = `[]`;

exports[`parse should parse ":@ FOO" 1`] = `
{
  "command": "FOO",
  "params": [],
}
`;

exports[`parse should parse ":@ FOO" 2`] = `[]`;

exports[`parse should parse ":nick FOO" 1`] = `
{
  "command": "FOO",
  "params": [],
  "prefix": {
    "name": "nick",
  },
}
`;

exports[`parse should parse ":nick FOO" 2`] = `[]`;

exports[`parse should parse ":nick!user FOO" 1`] = `
{
  "command": "FOO",
  "params": [],
  "prefix": {
    "name": "nick",
    "user": "user",
  },
}
`;

exports[`parse should parse ":nick!user FOO" 2`] = `[]`;

exports[`parse should parse ":nick!user@host FOO" 1`] = `
{
  "command": "FOO",
  "params": [],
  "prefix": {
    "host": "host",
    "name": "nick",
    "user": "user",
  },
}
`;

exports[`parse should parse ":nick!user@host FOO" 2`] = `[]`;

exports[`parse should parse ":nick@host FOO" 1`] = `
{
  "command": "FOO",
  "params": [],
  "prefix": {
    "host": "host",
    "name": "nick",
  },
}
`;

exports[`parse should parse ":nick@host FOO" 2`] = `[]`;

exports[`parse should parse ":se.rv.er FOO" 1`] = `
{
  "command": "FOO",
  "params": [],
  "prefix": {
    "name": "se.rv.er",
  },
}
`;

exports[`parse should parse ":se.rv.er FOO" 2`] = `[]`;

exports[`parse should parse ":test     PRIVMSG    foo     :bar" 1`] = `
{
  "command": "PRIVMSG",
  "params": [
    "foo",
    "bar",
  ],
  "prefix": {
    "name": "test",
  },
}
`;

exports[`parse should parse ":test     PRIVMSG    foo     :bar" 2`] = `
[
  "foo",
  "bar",
]
`;

exports[`parse should parse ":test " 1`] = `[ParseError: Invalid Message]`;

exports[`parse should parse ":test FOO     " 1`] = `
{
  "command": "FOO",
  "params": [],
  "prefix": {
    "name": "test",
  },
}
`;

exports[`parse should parse ":test FOO     " 2`] = `[]`;

exports[`parse should parse ":test FOO bar baz quux" 1`] = `
{
  "command": "FOO",
  "params": [
    "bar",
    "baz",
    "quux",
  ],
  "prefix": {
    "name": "test",
  },
}
`;

exports[`parse should parse ":test FOO bar baz quux" 2`] = `
[
  "bar",
  "baz",
  "quux",
]
`;

exports[`parse should parse ":test FOO" 1`] = `
{
  "command": "FOO",
  "params": [],
  "prefix": {
    "name": "test",
  },
}
`;

exports[`parse should parse ":test FOO" 2`] = `[]`;

exports[`parse should parse ":test PRIVMSG #fo:oo :This is a test" 1`] = `
{
  "command": "PRIVMSG",
  "params": [
    "#fo:oo",
    "This is a test",
  ],
  "prefix": {
    "name": "test",
  },
}
`;

exports[`parse should parse ":test PRIVMSG #fo:oo :This is a test" 2`] = `
[
  "#fo:oo",
  "This is a test",
]
`;

exports[`parse should parse ":test PRIVMSG foo :A string   with spaces   " 1`] = `
{
  "command": "PRIVMSG",
  "params": [
    "foo",
    "A string   with spaces   ",
  ],
  "prefix": {
    "name": "test",
  },
}
`;

exports[`parse should parse ":test PRIVMSG foo :A string   with spaces   " 2`] = `
[
  "foo",
  "A string   with spaces   ",
]
`;

exports[`parse should parse ":test!me@test.ing PRIVMSG #Test :This is a test" 1`] = `
{
  "command": "PRIVMSG",
  "params": [
    "#Test",
    "This is a test",
  ],
  "prefix": {
    "host": "test.ing",
    "name": "test",
    "user": "me",
  },
}
`;

exports[`parse should parse ":test!me@test.ing PRIVMSG #Test :This is a test" 2`] = `
[
  "#Test",
  "This is a test",
]
`;

exports[`parse should parse "@" 1`] = `[ParseError: Invalid Message]`;

exports[`parse should parse "@test=;single :" 1`] = `[ParseError: Invalid Message]`;

exports[`parse should parse "@test=super;single     :test!me@test.ing    FOO   bar    baz   quux   :This is a test" 1`] = `
{
  "command": "FOO",
  "params": [
    "bar",
    "baz",
    "quux",
    "This is a test",
  ],
  "prefix": {
    "host": "test.ing",
    "name": "test",
    "user": "me",
  },
  "tags": {
    "single": true,
    "test": "super",
  },
}
`;

exports[`parse should parse "@test=super;single     :test!me@test.ing    FOO   bar    baz   quux   :This is a test" 2`] = `
[
  "bar",
  "baz",
  "quux",
  "This is a test",
]
`;

exports[`parse should parse "@test=super;single :  This is a test" 1`] = `
{
  "command": "This",
  "params": [
    "is",
    "a",
    "test",
  ],
  "tags": {
    "single": true,
    "test": "super",
  },
}
`;

exports[`parse should parse "@test=super;single :  This is a test" 2`] = `
[
  "is",
  "a",
  "test",
]
`;

exports[`parse should parse "@test=super;single :" 1`] = `[ParseError: Invalid Message]`;

exports[`parse should parse "@test=super;single :test!me@test.ing FOO bar baz quux :This is a test" 1`] = `
{
  "command": "FOO",
  "params": [
    "bar",
    "baz",
    "quux",
    "This is a test",
  ],
  "prefix": {
    "host": "test.ing",
    "name": "test",
    "user": "me",
  },
  "tags": {
    "single": true,
    "test": "super",
  },
}
`;

exports[`parse should parse "@test=super;single :test!me@test.ing FOO bar baz quux :This is a test" 2`] = `
[
  "bar",
  "baz",
  "quux",
  "This is a test",
]
`;

exports[`parse should parse "@test=super\\r\\n\\\\\\:\\shyper\\;single :" 1`] = `[ParseError: Invalid Message]`;

exports[`parse should parse "@test=super\\shyper;single :" 1`] = `[ParseError: Invalid Message]`;

exports[`parse should parse "FOO    bar      baz   quux" 1`] = `
{
  "command": "FOO",
  "params": [
    "bar",
    "baz",
    "quux",
  ],
}
`;

exports[`parse should parse "FOO    bar      baz   quux" 2`] = `
[
  "bar",
  "baz",
  "quux",
]
`;

exports[`parse should parse "FOO bar baz quux :This is a test" 1`] = `
{
  "command": "FOO",
  "params": [
    "bar",
    "baz",
    "quux",
    "This is a test",
  ],
}
`;

exports[`parse should parse "FOO bar baz quux :This is a test" 2`] = `
[
  "bar",
  "baz",
  "quux",
  "This is a test",
]
`;

exports[`parse should parse "FOO bar baz quux" 1`] = `
{
  "command": "FOO",
  "params": [
    "bar",
    "baz",
    "quux",
  ],
}
`;

exports[`parse should parse "FOO bar baz quux" 2`] = `
[
  "bar",
  "baz",
  "quux",
]
`;

exports[`parse should parse "FOO" 1`] = `
{
  "command": "FOO",
  "params": [],
}
`;

exports[`parse should parse "FOO" 2`] = `[]`;

exports[`parse should parse "PRIVMSG #Test :This is a test" 1`] = `
{
  "command": "PRIVMSG",
  "params": [
    "#Test",
    "This is a test",
  ],
}
`;

exports[`parse should parse "PRIVMSG #Test :This is a test" 2`] = `
[
  "#Test",
  "This is a test",
]
`;

exports[`parse should parse with custom tag mapper 1`] = `
{
  "command": "FOO",
  "params": [
    "This is a test",
  ],
  "prefix": {
    "host": "test.ing",
    "name": "test",
    "user": "me",
  },
  "tags": {
    "single_mapped": "true_mapped",
    "test_mapped": "super_mapped",
  },
}
`;
